# api_string

./: CMakeLists.txt  README.md
compilation_benchmarks/: api_string.cpp  compile.sh  compile.sh~  speudo_std_string.cpp  std_string.cpp  std_string_view.cpp
include/: api_string.hpp  string.hpp
include/detail/: api_string_memory.hpp
include/private/: api_string_memory.hpp  string.tcc
source/: api_string.cpp
test/: basic_api_string.cpp  basic_string.cpp  custom_allocator.hpp
